# DiscordLogging

./: .gitignore  README.md  pyproject.toml
discord_logging/: __init__.py
