[tool.poetry]
name = "discord_logging"
version = "0.1.0"
description = "Discord webhook handler for the logging module."
authors = ["jeypiti <jeypiti@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
