[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2
remove_redundant_aliases = true
float_to_top = true
color_output = true

[tool.poetry]
name = "discord_logging"
version = "1.0.0"
description = "Discord webhook handler for the logging module."
authors = ["jeypiti <jeypiti@icloud.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeypiti/DiscordLogging"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
